--- a/simcon_project/requirements.txt
+++ b/simcon_project/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.3.1
 Django==3.1.3
+django-bootstrap-modal-forms==2.0.1
 django-embed-video==1.4.0
+django-tables2==2.3.4
 docutils==0.16
 pytz==2020.4
 requests==2.25.1
