--- a/simcon_project/requirements.txt
+++ b/simcon_project/requirements.txt
@@ -16,3 +16,7 @@ requests==2.25.1
 sqlparse==0.4.1
 tablib==3.0.0
 urllib3==1.26.2
+APScheduler==3.7.0
+django-apscheduler==0.5.2
+six==1.15.0
+tzlocal==2.1
