--- a/simcon_project/requirements.txt
+++ b/simcon_project/requirements.txt
@@ -5,6 +5,7 @@ Django==3.1.3
 django-bootstrap-modal-forms==2.0.1
 django-cleanup==5.1.0
 django-embed-video==1.4.0
+django-select2==7.6.1
 django-tables2==2.3.4
 docutils==0.16
 et-xmlfile==1.0.1
